# barcode

./: .gitignore  backend.py  main.py  pyproject.toml  start-app-tmux.sh  test_barcode_tests.py  test_digit_encoding.py  test_generate_ean13_code.py  test_generate_ean8_code.py  test_number_with_check_digit.py
backend/: .gitignore  app.py  backend.py  barcode.py  code128.py  code39.py  ean.py  main.py  pyproject.toml  run_contract_tests.sh  test_barcode_tests.py  test_barcode_validation.py  test_code128.py  test_code39.py  test_ean.py  test_generate_ean8_code.py  test_number_with_check_digit.py
frontend/: package.json
frontend/pact/pacts/: frontend-backend.json
frontend/src/: App.tsx  Barcode.tsx  apiClient.barcode.contract.test.ts  apiClient.barcodeTypes.contract.test.ts  apiClient.binaryCode.contract.test.ts  apiClient.ts
