[tool.poetry]
name = "barcode"
version = "0.1.0"
description = ""
authors = ["chen <chen.li@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.9"
svgwrite = "^1.4.1"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
